--- a/CSS Flexbox/flexblog/css/style.css
+++ b/CSS Flexbox/flexblog/css/style.css
@@ -14,7 +14,7 @@ a {
 }
 
 body {
-  font-family: "nunito", Helvetica, Arial, sans-serif;
+  font-family: 'nunito', Helvetica, Arial, sans-serif;
   color: #222222;
 }
 
@@ -90,40 +90,159 @@ img {
   color: #122ab2;
 }
 
-.introducao {
+.introduction {
+  font-size: 3em;
+  margin: 0 auto;
+  line-height: 1;
+  padding: 60px 10px;
+  max-width: 960px;
 }
 
 .sobre {
+  border-top: 2px solid #2c70ff;
+  border-bottom: 2px solid #2c70ff;
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 60px 0;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .sobre-info {
+  flex: 2 1 300px;
+  margin: 0 10px;
+}
+
+.sobre-info h1 {
+  font-size: 3em;
+  margin-bottom: 0.5em;
+}
+
+.sobre-info p {
+  font-size: 1.25em;
+  line-height: 1.4;
+  margin-bottom: 1em;
+  color: #7c7c7c;
 }
 
 .sobre-img {
+  flex: 1 1 160px;
+  margin: 0 10px;
 }
 
 .produtos {
+  max-width: 960px;
+  margin: 60px auto;
+}
+
+.produtos h1 {
+  font-size: 3em;
+  margin: 0 10px 60px 10px;
 }
 
 .produtos-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-end;
 }
 
-.produtos-item {
+.produto-item {
+  flex: 1 1 175px;
+  margin: 10px;
+}
+
+.produto-item h2 {
+  font-size: 3em;
+  color: #a4a4a4;
+  background: #f7f7f7;
+  padding: 60px 20px;
 }
 
 .purple {
+  border-top: 8px solid #ae81ff;
 }
 
 .pink {
+  border-top: 8px solid #f9265e;
 }
 
 .blue {
+  border-top: 8px solid #66d9eb;
 }
 
 .preco {
+  background: #f7f7f7;
+  padding: 60px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-end;
 }
 
 .preco-item {
+  flex: 1;
+  border: 4px solid white;
+  padding: 20px;
+  margin: 10px;
+}
+
+.preco-item h2 {
+  font-size: 3em;
+  color: #a4a4a4;
+  text-align: center;
+  margin-top: 20px;
+}
+
+.preco-item span {
+  display: block;
+  max-width: 300px;
+  margin: 20px auto;
+  text-align: center;
+  font-size: 3em;
+  font-weight: bold;
+  padding: 10px 0 5px 0;
+  border-top: 4px solid white;
+  border-bottom: 4px solid white;
+}
+
+.preco-item span sup {
+  font-size: 0.5em;
+}
+
+.preco-item ul {
+  max-width: 300px;
+  margin: 20px auto;
+  font-size: 1.25em;
+  font-style: italic;
+  color: #7c7c7c;
+}
+
+.preco-item li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.preco-item li::after {
+  content: '';
+  display: block;
+  width: 6px;
+  height: 6px;
+  background: #2c70ff;
+  border-radius: 50%;
+}
+
+.preco-item a {
+  max-width: 300px;
+  display: block;
+  border: 4px solid;
+  color: #222222;
+  margin: 20px auto;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 2.25em;
+  padding: 15px;
+  text-align: center;
 }
 
 .qualidade {
@@ -142,4 +261,11 @@ img {
 }
 
 .footer {
+}
+
+@media (max-width: 768px) {
+  .preco {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
 }
